[package]
name = "chapchap"
version = "0.1.1"
authors = ["Hamid R. K. Pishghadam <hamidrkp@riseup.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Kill distracting Apps"
repository = "https://github.com/hamidrezakp/ChapChap/"

[dependencies]
psutil = "3.2"
config = "0.10"
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}


