[package]
name = "chapchap"
version = "0.2.0"
authors = ["Hamid R. K. Pishghadam <hamidrkp@riseup.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Kill distracting Apps"
repository = "https://github.com/hamidrezakp/ChapChap/"

[dependencies]
psutil = {version = "3.2",  default-features = false, features = ["process"]}
config = "0.10"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
regex = "1.10.2"


